# rincos2

./: Cargo.toml  codex.md  limine.conf  ovmf_vars.fd  run
.cargo/: config.toml
arch/: Cargo.toml  lib.rs
arch/aarch64/: Cargo.toml  linker.ld
arch/aarch64/src/: lib.rs
arch/x86_64/: Cargo.toml  build.rs  linker.ld
arch/x86_64/src/: apic.rs  cpuid.rs  gdt.rs  idt.rs  lib.rs  mmu.rs  msr.rs  serial.rs  tsc.rs  tss.rs  util.rs
arch/x86_64/src/interrupts/: mod.rs  stubs.S
crates/bootabi/: Cargo.toml
crates/bootabi/src/: lib.rs
crates/bootloader/limine/: Cargo.toml
crates/bootloader/limine/src/: lib.rs
crates/hal/: Cargo.toml
crates/hal/src/: interrupt.rs  lib.rs  mmu.rs  serial.rs  time.rs
iso/EFI/BOOT/: BOOTX64.EFI
iso/boot/: limine-bios.sys  rincos
kernel/: Cargo.toml
kernel/src/: arch.rs  bootinfo.rs  hal.rs  interrupts.rs  kmain.rs  main.rs  panic.rs  time.rs
kernel/src/debug/: early_serial.rs  mod.rs
kernel/src/drivers/console/: mod.rs  serial.rs
kernel/src/hal/: mod.rs
kernel/src/log/: mod.rs
kernel/src/svc/: ipc.rs  mod.rs  sched.rs  vm.rs
platform/uefi/: Cargo.toml
targets/: aarch64-unknown-none.json  x86_64-unknown-none.json
tools/: run-x86_64-qemu.sh  x64_iso.sh
