[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootabi = { path = "../crates/bootabi"}
bootloader_limine = {path = "../crates/bootloader/limine"}

spin = "0.10.0"
bitflags = "2.10"

arch_x86_64 = {path = "../arch/x86_64", optional = true}
arch_aarch64 = {path = "../arch/aarch64", optional = true }

[features]
x86_64 = ["dep:arch_x86_64"]
aarch64 = ["dep:arch_aarch64"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
lto = true
