[package]
name = "kernel"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kernel"
path = "src/main.rs"

[dependencies]
bootabi = { path = "../crates/bootabi"}
bootloader_limine = {path = "../crates/bootloader/limine"}
arch = { path = "../arch" }
hal = {path = "../crates/hal"}

spin = "0.10.0"
bitflags = "2.10"
